<resources>
    <string name="app_name">CaveSurvey</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="required">Required</string>
    <string name="invalid">Invalid</string>
    <string name="success">Success</string>
    <string name="any">Any</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="sk_paldin">Paldin</string>
    <string name="home_no_projects">Create survey</string>
    <string name="home_new_project">New survey</string>
    <string name="home_button_new_exists">Survey %1$s exists!</string>
    <string name="home_delete_project">Delete survey %1$s?</string>
    <string name="home_lang"><u>Language</u></string>
    <string name="new_title">New Survey</string>
    <string name="new_button_create">Create</string>
    <string name="project_header">Survey Name</string>
    <string name="project_name">Name</string>
    <string name="project_name_required">Enter name</string>
    <string name="project_name_characters">Contains bad characters</string>
    <string name="project_import">Import data</string>
    <string name="import_success">Import successful</string>
    <string name="main_leg">Current leg</string>
    <string name="main_button_change">Select</string>
    <string name="main_button_change_title">Select leg</string>
    <string name="main_button_add">Add</string>
    <string name="main_button_data">Data</string>
    <string name="main_button_about">About</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_map">Map</string>
    <string name="map_plan">Plan</string>
    <string name="map_section">Section</string>
    <string name="main_table_header_from">From</string>
    <string name="main_table_header_to">To</string>
    <string name="main_table_header_more">More</string>
    <string name="main_table_header_note">Note</string>
    <string name="main_table_header_drawing">Drawing</string>
    <string name="main_table_header_photo">Photo</string>
    <string name="leg">Leg</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="distance">Length</string>
    <string name="azimuth">Compass</string>
    <string name="slope">Clinometer</string>
    <string name="point_photos_header">Photos</string>
    <string name="point_photo_label">Photo %1$s</string>
    <string name="point_sketches_header">Sketches</string>
    <string name="point_sketch_label">Sketch %1$s</string>
    <string name="point_vectors_header">Vectors</string>
    <string name="point_vectors_counter">Vector #</string>
    <string name="point_vectors_delete">Delete vector %1$s?</string>
    <string name="point_swipe_not_possible">Gallery border reached</string>
    <string name="slope_column">Clinometer:</string>
    <string name="sensor">Sensor</string>
    <string name="accuracy">Accuracy</string>
    <string name="value">Value</string>
    <string name="main_add_title">Add New</string>
    <string name="main_add_leg">Next Leg</string>
    <string name="main_add_gallery">Next Gallery</string>
    <string name="main_add_middlepoint">Middle Point</string>
    <string name="main_add_note">Note</string>
    <string name="main_add_sketch">Draw</string>
    <string name="main_add_photo">Photo</string>
    <string name="main_add_gps">GPS</string>
    <string name="main_add_vector">Add Vectors</string>
    <string name="main_reverse">Reverse</string>
    <string name="main_reverse_message">Direction and slope of leg %1$s will be reversed!</string>
    <string name="main_delete_message">Leg %1$s will be deleted!</string>
    <string name="table_sketch_prefix">S</string>
    <string name="table_note_prefix">N</string>
    <string name="table_photo_prefix">P</string>
    <string name="table_location_prefix">L</string>
    <string name="table_vector_prefix">V</string>
    <string name="gallery_after_first_point">Not available for first leg</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_exit_confirmation_question">End survey?</string>
    <string name="point_save">Save</string>
    <string name="point_delete">Delete</string>
    <string name="note_title">Note for</string>
    <string name="note_save">Save</string>
    <string name="note_saved">Saved</string>
    <string name="vectors_title">Vector</string>
    <string name="vector_button_add_again">Save + New</string>
    <string name="sketch_pick_color">Pick a Color</string>
    <string name="sketch_pick_size">Pick a Size</string>
    <string name="sketch_pick_style">Pick a Style</string>
    <string name="sketch_pick_style_thick">Thick</string>
    <string name="sketch_pick_style_fill">Fill</string>
    <string name="sketch_pick_style_dash">Dash</string>
    <string name="sketch_saved">saved</string>
    <string name="sketch_undo">Undo</string>
    <string name="sketch_redo">Redo</string>
    <string name="sketch_save">Save</string>
    <string name="sketch_colorpicker">color picker</string>
    <string name="sketch_style">Style</string>
    <string name="sketch_size">Size</string>
    <string name="map_edit">Edit</string>
    <string name="update_project">Update</string>
    <string name="message_project_udpated">Project updated</string>
    <string name="statistics">Statistics</string>
    <string name="info_created">Created</string>
    <string name="info_galleries"># galleries</string>
    <string name="info_legs"># legs</string>
    <string name="info_total_distance">Raw length</string>
    <string name="info_chooser_open_folder">Open folder</string>
    <string name="info_num_notes"># notes</string>
    <string name="info_num_drawings"># drawings</string>
    <string name="info_num_coordinates"># coordinates</string>
    <string name="info_num_photos"># photos</string>
    <string name="info_num_vectors"># vectors</string>
    <string name="export_xls">Excel export</string>
    <string name="export_vtopo">Visual Topo</string>
    <string name="export_view_files">Data Files</string>
    <string name="export_cavear">CaveAR</string>
    <string name="export_share">Share</string>
    <string name="export_cavear_missing">CaveAR is not installed</string>
    <string name="export_done">Exported to %1$s</string>
    <string name="export_io_error">Failed to write to SD card</string>
    <string name="io_error">Unable to access SD card</string>
    <string name="share_title">Survey data folder</string>
    <string name="grottocenter_dialog_title">Upload to GrottoCenter</string>
    <string name="grottocenter_entrance_id">Entrance Identifier</string>
    <string name="grottocenter_username">Username</string>
    <string name="grottocenter_password">Password</string>
    <string name="grottocenter_authenticating">Authenticating ...</string>
    <string name="grottocenter_preparing">Preparing ...</string>
    <string name="grottocenter_uploading">Uploading ...</string>
    <string name="grottocenter_assign_to_entrance">Assign to entrance ...</string>
    <string name="grottocenter_upload">Upload</string>
    <string name="grottocenter_info">Uploads current project data to https://grottocenter.org as a document.\nIt can be assigned to existing entrance and needs approval to be visible.</string>
    <string name="measures_title">Data Input</string>
    <string name="data_input_units">Units</string>
    <string name="data_input_source">Source</string>
    <string name="options_units_distance">Distance:</string>
    <string-array name="distance_units">
        <item>Meters</item>
        <item>Feet</item>
    </string-array>
    <string-array name="distance_read_type">
        <item>Manually</item>
        <item>From Bluetooth</item>
    </string-array>
    <string name="options_units_azimuth">Azimuth:</string>
    <string-array name="azimuth_units">
        <item>Degrees</item>
        <item>Grad</item>
    </string-array>
    <string-array name="azimuth_read_type_manually">
        <item>Manually</item>
        <item>From Bluetooth</item>
    </string-array>
    <string-array name="azimuth_read_type_all">
        <item>Manually</item>
        <item>Built-in sensor</item>
        <item>From Bluetooth</item>
    </string-array>
    <string name="options_units_slope">Slope:</string>
    <string-array name="slope_units">
        <item>Degrees</item>
        <item>Grad</item>
    </string-array>
    <string-array name="slope_read_type">
        <item>Manually</item>
        <item>From Bluetooth</item>
    </string-array>
    <string-array name="slope_read_type_all">
        <item>Manually</item>
        <item>From Bluetooth</item>
        <item>Built-in sensor</item>
    </string-array>
    <string-array name="latitude_types">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string-array name="longitude_types">
        <item>E</item>
        <item>W</item>
    </string-array>
    <string name="about_title">About CaveSurvey</string>
    <string name="about_user_guide">Help &amp; User Guide</string>
    <string name="about_paldin">http://sk-paldin.eu</string>
    <string name="about_help">https://github.com/lz1asl/CaveSurvey/wiki/User-Guide</string>
    <string name="info_distance_in">Distance in</string>
    <string name="info_azimuth_in">Azimuth in</string>
    <string name="info_slope_in">Slope in</string>
    <string name="info_azimuth_build_in_sensor">Build-in sensor configured</string>
    <string name="sensor_none">-</string>
    <string name="rotation_sensor">Rotation</string>
    <string name="magnetic_sensor">Magnetic/Accelerometer</string>
    <string name="orientation_sensor">Orientation</string>
    <string name="middle_leg_add">Add middle point</string>
    <string name="middle_leg_info">Leg  %1$s</string>
    <string name="middle_leg_distance">out of %1$s %2$s</string>
    <string name="middle_split_at">At</string>
    <string name="middle_create">Create</string>
    <string name="middle_bad_value">Bad value</string>
    <string name="middle_leg_shorter">Too short</string>
    <string name="middle_leg_bigger">Too big</string>
    <string name="middle_no_value">Distance required</string>
    <string name="error">Error occurred</string>
    <string name="error_no_space">No space left on device</string>
    <string name="busy">Please wait&#8230;</string>
    <string name="bt_devices_info">Paired compatible devices:</string>
    <string name="bt_supported_devices">Compatible with:</string>
    <string name="bt_devices_help"><u>Devices Info</u></string>
    <string name="sensors_title"><u>Build-in Sensors</u></string>
    <string name="gps_altitude">Altitude (m)</string>
    <string name="gps_latitude">Latitude</string>
    <string name="gps_longitude">Longitude</string>
    <string name="gps_accuracy">Accuracy (m)</string>
    <string name="gps_no_value">No value</string>
    <string name="gps_saved_location">Saved location</string>
    <string name="settings_auto_backup">Auto backup</string>
    <string name="settings_import_source">Import from:</string>
    <string name="settings_vectors"><u>Vectors</u></string>
    <string name="settings_measurements"><u>Measurements</u></string>
    <string name="measurements_use_backshots">Use back-shots</string>
    <string name="measurements_adjustment">Adjustments</string>
    <string name="measurements_adjust_length">Bluetooth length adjustment (meters)</string>
    <string name="measurements_length_boundaries">Length boundaries</string>
    <string name="measurements_error_handling">Error handling</string>
    <string name="export_openstopo_title">OpensTopo</string>
    <string name="information">Information</string>
    <string name="splash_loading">Preparing ...</string>
    <string name="splash_storage_warning_title">New storage permissions</string>
    <string name="splash_storage_warning_text">Please pick CaveSurvey working directory.</string>
</resources>