<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/info_action_export_xls"
        android:icon="@drawable/ic_action_import_export"
        android:title="@string/export_xls"
        android:visible="true"
        myapp:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/info_action_openstopo"
        android:icon="@drawable/speleotux_logo"
        android:title="@string/export_openstopo_title"
        android:visible="false"
        myapp:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/info_action_export_vtopo"
        android:icon="@drawable/vtopo_logo"
        android:title="@string/export_vtopo"
        android:visible="true"
        myapp:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/info_action_view_files"
        android:icon="@drawable/ic_action_collection"
        android:title="@string/export_view_files"
        android:visible="true"
        myapp:showAsAction="ifRoom|withText" />
</menu>    