<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_leg_info"
        android:id="@+id/middleLegInfo"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/middle_split_at"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:maxLength="5"
            android:ems="5"
            android:gravity="center"
            android:id="@+id/middle_distance"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_leg_distance"
            android:id="@+id/middleLegDistance"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_create"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/middle_create"/>

</LinearLayout>