<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
    >

    <TableRow android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:layout_marginTop="10dp">    
	    <TextView android:id="@+id/location_fragment_title"
	              android:text="@string/gps_saved_location"
	              android:layout_height="wrap_content"
	              android:layout_width="0dp"
	              android:layout_weight="1"
	              android:gravity="center"
	              android:textAppearance="?android:attr/textAppearanceLarge"/>
    </TableRow>        
    
    <TableRow android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:layout_marginTop="10dp">
		<TextView android:id="@+id/gps_latitude"
		          android:text="@string/gps_no_value"
		          android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:gravity="center"
		          android:textAppearance="?android:attr/textAppearanceLarge"/>
		<TextView android:id="@+id/gps_longitude"
		          android:text="@string/gps_no_value"
		          android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:gravity="center"
		          android:textAppearance="?android:attr/textAppearanceLarge"/>
    </TableRow>
    <TableRow android:layout_width="fill_parent"
              android:layout_height="wrap_content" >
		<TextView android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:text="@string/gps_latitude"
		          android:gravity="center"/>
		<TextView android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:text="@string/gps_longitude"
		          android:gravity="center"/>		        
    </TableRow>
    <TableRow android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:layout_marginTop="10dp">
		<TextView android:id="@+id/gps_altitude"
		          android:text="@string/gps_no_value"
		          android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:gravity="center"
		          android:textAppearance="?android:attr/textAppearanceLarge"/>
		<TextView android:id="@+id/gps_accuracy"
		          android:text="@string/gps_no_value"
		          android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:gravity="center"
		          android:textAppearance="?android:attr/textAppearanceLarge"/>
    </TableRow>
    <TableRow android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              >
		<TextView android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:text="@string/gps_altitude"
		          android:gravity="center"/>
		<TextView android:layout_height="wrap_content"
		          android:layout_width="0dp"
		          android:layout_weight="1"
		          android:text="@string/gps_accuracy"
		          android:gravity="center"/>		
    </TableRow>        

</TableLayout>