<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/splashStorageTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:gravity="center_horizontal"
        android:text="@string/splash_storage_warning_title"
        android:layout_margin="5dp"
        android:textSize="22sp"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/splashStorageText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:layout_marginTop="10dp"
        android:text="@string/splash_storage_warning_text"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/splashStorageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/ok"
        android:onClick="askHomeFolder"/>

</LinearLayout>