<!-- res/layout/fragment_login.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/grottocenter_upload_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/grottocenter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grottocenter_username"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/grottocenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/grottocenter_password"
        android:inputType="textPassword"
        android:maxLength="50"/>

    <Button
        android:id="@+id/grottocenter_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/grottocenter_upload" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</LinearLayout>
