<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/bt_devices_info"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/bt_devices"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/bt_container">

            <TextView
                android:id="@+id/bt_status"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bt_supported_devices"/>

            <TextView
                android:id="@+id/bt_preparing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_loading"/>

        </LinearLayout>

        <TextView
            android:id="@+id/bt_devices_help"
            android:text="@string/bt_devices_help"
            android:onClick="showDevicesHelp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>
</ScrollView>